insert jadwal and kiblat activty include settiung and back

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,8 @@
         <activity android:name=".activity.QuranActivity" />
         <activity android:name=".activity.AyatActivity" />
         <activity android:name=".activity.TasbihActivity" />
+        <activity android:name=".activity.JadwalSholatActivity" />
+        <activity android:name=".activity.KiblatActivity" />
     </application>
 
 </manifest>
