--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
         <activity android:name=".activity.MainActivity" />
         <activity android:name=".activity.QuranActivity" />
         <activity android:name=".activity.AyatActivity" />
-        <activity android:name=".activity.TasbihActivity" />
+        <activity android:name=".activity.HaditsActivity" />
         <activity android:name=".activity.KiblatActivity" />
         <activity android:name=".activity.HubungiKamiActivity" />
         <activity android:name=".activity.SyaratDanKetentuanActivity" />
