--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,9 @@
         android:theme="@style/Theme.MasjidAnnur"
         tools:targetApi="31">
         <activity
-            android:name=".activity.BantuanActivity" />
+            android:name=".activity.IsiHaditsActivity"
+            android:exported="false" />
+        <activity android:name=".activity.BantuanActivity" />
         <activity
             android:name=".activity.SplashActivity"
             android:exported="true">
@@ -42,8 +44,6 @@
         <activity android:name=".activity.FAQActivity" />
         <activity android:name=".activity.TanyaUstadzActivity" />
         <activity android:name=".activity.JadwalSholatActivity" />
-
-
     </application>
 
 </manifest>
