--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         android:roundIcon="@drawable/logo_masjid"
         android:supportsRtl="true"
         android:theme="@style/Theme.MasjidAnnur"
+        android:networkSecurityConfig="@xml/network_security_config"
         tools:targetApi="31">
         <activity
             android:name=".activity.DoaDetailActivity"
