--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,11 +16,14 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@drawable/logo_masjid"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@drawable/logo_masjid"
         android:supportsRtl="true"
         android:theme="@style/Theme.MasjidAnnur"
-        android:networkSecurityConfig="@xml/network_security_config"
         tools:targetApi="31">
+        <activity
+            android:name=".activity.SplashActivity"
+            android:exported="false" />
         <activity
             android:name=".activity.DoaDetailActivity"
             android:exported="false" />
@@ -29,13 +32,13 @@
             android:exported="false" />
         <activity android:name=".activity.BantuanActivity" />
         <activity
-            android:name=".activity.SplashActivity"
+            android:name=".activity.SplashhActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>                                                                          
+            </intent-filter>
         </activity>
         <activity android:name=".activity.MainActivity" />
         <activity android:name=".activity.QuranActivity" />
@@ -46,8 +49,10 @@
         <activity android:name=".activity.SyaratDanKetentuanActivity" />
         <activity android:name=".activity.TentangAplikasiActivity" />
         <activity android:name=".activity.FAQActivity" />
-        <activity android:name=".activity.TanyaUstadzActivity"
-            android:label="Chat Screen" android:windowSoftInputMode="adjustResize|stateVisible"/>
+        <activity
+            android:name=".activity.TanyaUstadzActivity"
+            android:label="Chat Screen"
+            android:windowSoftInputMode="adjustResize|stateVisible" />
         <activity android:name=".activity.JadwalSholatActivity" />
     </application>
 
