--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,9 @@
         android:theme="@style/Theme.MasjidAnnur"
         tools:targetApi="31">
         <activity
+            android:name=".activity.AboutDeveloperActivity"
+            android:exported="false" />
+        <activity
             android:name=".activity.SplashActivity"
             android:exported="false" />
         <activity
@@ -52,7 +55,10 @@
         <activity
             android:name=".activity.TanyaUstadzActivity"
             android:label="Chat Screen"
-            android:windowSoftInputMode="adjustResize|stateVisible" />
+            android:exported="false"
+            android:windowSoftInputMode="adjustPan">
+
+        </activity>
         <activity android:name=".activity.JadwalSholatActivity" />
     </application>
 
